tests/errors/incompatible_rank_assign.f90
program main
integer :: x = [1,2,3]
end program